--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Capaian Treatment TBC Riau </title>
+	<title>Penyelesaian Kejahatan Riau </title>
 	<meta charset="utf-8" />
 
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -219,7 +219,7 @@ carto_positron_lite_rainbow.addTo(map);
 			});
 		}
 
-		geojson = L.geoJson(riautbc , {
+		geojson = L.geoJson(penyelesaian_kejahatan_riau , {
 			zIndex:2,
       style: style,
 			onEachFeature: onEachFeature
